fix: video on mobile

--- a/styles.css
+++ b/styles.css
@@ -615,7 +615,7 @@ img {
 #spookyVideo {
     width: 100%;
     height: 100%;
-    object-fit: cover; 
+    object-fit: contain; 
     pointer-events: none; 
 }
 
